--- a/categories.html
+++ b/categories.html
@@ -7,7 +7,8 @@ layout: home
 <details name="category" open>
     <summary>{{ category[0] }}</summary>
     {% for post in category[1] %}
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <span class="date">{{ post.date | date_to_string }}</span>
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
         {{ post.excerpt }}
         <p><small><a href="{{ post.url }}" class="button">Read more</a></small></p>
         <hr />
